# KnightOne

./: .clang-format-ignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README  main.cpp
dome/: .gitignore  CMakeLists.txt
dome/cmake/: Findpandora.cmake
dome/src/: buffered_texture_2d.cpp  buffered_texture_2d.hpp  dome.cpp  dome.hpp  geometry_processor.cpp  geometry_processor.hpp  geometry_types.hpp  main.cpp  point.hpp  texture_processor.cpp  texture_processor.hpp  tinygltf_impl.cpp  tinygltf_impl.hpp  vertex.hpp
forge/: CMakeLists.txt
forge/src/: forge.cpp  forge.hpp  main.cpp  manifest.cpp  manifest.hpp  manifest_entry.hpp
game/: CMakeLists.txt
game/assets/fonts/: binary_to_compressed_c.md
game/assets/models/player/: carrier.blend  destroyer.blend  mech.blend  mech_weapons.blend
game/assets/models/raiders/: gunship_corvette.blend  interceptor.blend
game/assets/models/weapons/: heavy_mass_driver.blend
game/assets/textures/: palette.afphoto  palette.afphoto~lock~  pallete.xcf
game/assets/ui/icons/: encounter_button_engineering.afphoto  encounter_button_jump.afphoto  encounter_button_sensors.afphoto
game/cmake/: Findpandora.cmake
game/src/: fleet.hpp  game.cpp  game.hpp  main.cpp  orbit_camera.cpp  orbit_camera.hpp  test_entity.cpp  test_entity.hpp  testentity.cpp  testentity.hpp
game/src/components/: ai_strikecraft_controller_component.hpp  ammo_impact_component.hpp  ammo_movement_component.hpp  ammo_raycast_component.hpp  carrier_component.hpp  dice_component.hpp  faction_component.hpp  hardpoint_component.cpp  hardpoint_component.hpp  hull_component.hpp  mech_engine_component.hpp  mech_navigation_component.hpp  minable_component.hpp  name_component.hpp  player_controller_component.hpp  sector_camera_component.hpp  ship_component.hpp  ship_engine_component.hpp  ship_navigation_component.hpp  sub_sector_camera_component.hpp  weapon_component.hpp  wing_component.hpp
game/src/dice/: dice.cpp  dice.hpp  dice_generator.cpp  dice_generator.hpp
game/src/entity_builder/: entity_builder.cpp  entity_builder.hpp  entity_prefab_manager.cpp  entity_prefab_manager.hpp  game_component_registration.cpp
game/src/hyperscape/: hyperscape.cpp  hyperscape.hpp
game/src/items/: item.hpp  item_info.cpp  item_info.hpp  item_manager.cpp  item_manager.hpp
game/src/sector/: custom_sector.cpp  custom_sector.hpp  encounter.cpp  encounter.hpp  sector.cpp  sector.hpp  sector_camera.cpp  sector_camera.hpp  sector_generator.cpp  sector_generator.hpp  sector_info.cpp  sector_info.hpp  sector_key.hpp  sector_signal.cpp  sub_sector.cpp  sub_sector.hpp  sub_sector_info.hpp  wing.hpp
game/src/sector/encounters/: encounter.cpp  encounter.hpp  encounter_blueprint_nodes.cpp  encounter_blueprint_nodes.hpp  encounter_blueprint_types.cpp  encounter_blueprint_types.hpp  encounter_editor.cpp  encounter_editor.hpp  encounter_editor_id_generator.hpp  encounter_window.cpp  encounter_window.hpp
game/src/ship_builder/: ship_builder.cpp  ship_builder.hpp  ship_prefab_manager.cpp  ship_prefab_manager.hpp
game/src/sub_sector/: sub_sector.cpp  sub_sector.hpp
game/src/systems/: ai_strategic_system.cpp  ai_strategic_system.hpp  ai_strikecraft_controller_system.cpp  ai_strikecraft_controller_system.hpp  ammo_system.cpp  ammo_system.hpp  camera_system.cpp  camera_system.hpp  carrier_system.cpp  carrier_system.hpp  debug_render_system.cpp  debug_render_system.hpp  hardpoint_system.cpp  hardpoint_system.hpp  mech_navigation_system.cpp  mech_navigation_system.hpp  navigation_system.cpp  navigation_system.hpp  player_controller_system.cpp  player_controller_system.hpp  ship_navigation_system.cpp  ship_navigation_system.hpp  target_overlay_system.cpp  target_overlay_system.hpp  weapon_system.cpp  weapon_system.hpp
game/src/ui/: button.cpp  button.hpp  button_group.cpp  button_group.hpp  dice.cpp  dice.hpp  divider.cpp  divider.hpp  element.cpp  element.hpp  encounter_button.cpp  encounter_button.hpp  encounter_dice_selector.cpp  encounter_dice_selector.hpp  events.hpp  heading.cpp  heading.hpp  image.cpp  image.hpp  panel.cpp  panel.hpp  prefab_data.cpp  prefab_data.hpp  prefab_editor.cpp  prefab_editor.hpp  property.hpp  stack.cpp  stack.hpp  stackable_element.cpp  stackable_element.hpp  text.cpp  text.hpp  theme.hpp  ui.cpp  ui.fwd.hpp  ui.hpp  window.cpp  window.hpp
pandora/: CMakeLists.txt
pandora/cmake/shared/: FetchExternalDependencies.cmake
pandora/src/: pandora.cpp  pandora.hpp
pandora/src/core/: color.cpp  color.hpp  interpolation.hpp  log.cpp  log.hpp  random.cpp  random.hpp  result.hpp  signal.hpp  smart_ptr.hpp
pandora/src/debug_visualization/: model_visualization.cpp  model_visualization.hpp
pandora/src/imgui/: imgui.cpp  imgui.hpp  imgui_config.hpp  imgui_system.cpp  imgui_system.hpp  imguisystem.cpp  imguisystem.hpp
pandora/src/input/: input_system.cpp  input_system.hpp
pandora/src/physics/: collision_shape.cpp  collision_shape.hpp  physics_visualization.cpp  physics_visualization.hpp
pandora/src/render/: color_texture.cpp  color_texture.hpp  debug_render.cpp  debug_render.hpp  debug_render_demo.cpp  debug_render_demo.hpp  depth_texture.cpp  depth_texture.hpp  material.cpp  material.hpp  rendersystem.cpp  rendersystem.hpp  shader_compilation_error.hpp  shader_compilation_result.cpp  shader_compilation_result.hpp  shader_compiler.cpp  shader_compiler.hpp  shader_editor.cpp  shader_editor.hpp  shader_preprocessor.cpp  shader_preprocessor.hpp  window.cpp  window.hpp  window_settings.hpp
pandora/src/resources/: resource.cpp  resource.fwd.hpp  resource.hpp  resource_data_store.cpp  resource_data_store.hpp  resource_font.cpp  resource_font.hpp  resource_model.cpp  resource_model.hpp  resource_shader.cpp  resource_shader.hpp  resource_system.cpp  resource_system.hpp  resource_texture_2d.cpp  resource_texture_2d.hpp
pandora/src/scene/: camera.cpp  camera.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp  system.hpp
pandora/src/vfs/: file.cpp  file.hpp  vfs.cpp  vfs.hpp
pandora/tools/manifest_generator/: CMakeLists.txt
(+67 files in other folders)
